HW4-FLOAT: 1 and 2 tasks fixed horizontal scroll

--- a/HW4-FLOAT/Task1/css/main.css
+++ b/HW4-FLOAT/Task1/css/main.css
@@ -3,6 +3,7 @@ body {
   background-color: #fbfbfb;
   font-family: "Lato", serif;
   color: #474747;
+  overflow-x: hidden;
 }
 
 .container {
