--- a/HW4-FLOAT/Task2/css/main.css
+++ b/HW4-FLOAT/Task2/css/main.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  overflow-x: hidden;
+}
+
 .container {
   width: 100%;
   height: 100%;
